--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,6 +9,7 @@
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
 play.crypto.secret = "changeme"
+play.crypto.secret=${?APPLICATION_SECRET}
 
 # The application languages
 # ~~~~~
@@ -30,8 +31,8 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 # db.default.username=sa
 # db.default.password=""
 
