initial cut to postgres

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,9 +37,9 @@ play.i18n.langs = [ "en" ]
 # db.default.password=""
 
 # Default database configuration
-slick.dbs.default.driver="slick.driver.H2Driver$"
-slick.dbs.default.db.driver="org.h2.Driver"
-slick.dbs.default.db.url="jdbc:h2:mem:brews"
+slick.dbs.default.driver="slick.driver.PostgresDriver"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="postgres://admin:admin@localhost:5432/brews"
 
 # Evolutions
 # ~~~~~
