--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,6 +37,13 @@ play.i18n.langs = [ "en" ]
 # db.default.password=""
 
 # Default database configuration
+//brewDB = {
+//  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
+//  url = "jdbc:postgresql://localhost:5432/brew"
+//  user = "admin"
+//  password = "admin"
+//  numThreads = 10
+//}
 slick.dbs.default.driver="slick.driver.PostgresDriver"
 slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="postgres://admin:admin@localhost:5432/brews"
