feels close to working db layer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,13 +38,13 @@ play.i18n.langs = [ "en" ]
 
 # Default database configuration
 //brewDB = {
-//  dataSourceClass = org.postgresql.ds.PGSimpleDataSource
+//  dataSourceClass = org.postgresql.Driver
 //  url = "jdbc:postgresql://localhost:5432/brew"
 //  user = "admin"
 //  password = "admin"
 //  numThreads = 10
 //}
-slick.dbs.default.driver="slick.driver.PostgresDriver"
+slick.dbs.default.driver="slick.driver.PostgresDriver$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="postgres://admin:admin@localhost:5432/brews"
 
