sorted play db config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,12 +46,17 @@ play.i18n.langs = [ "en" ]
 //}
 slick.dbs.default.driver="slick.driver.PostgresDriver$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="postgres://admin:admin@localhost:5432/brews"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/brews"
+slick.dbs.default.db.user="admin"
+slick.dbs.default.db.password="admin"
+
+slick.default="models.database.*"
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# play.evolutions.enabled=false
+#play.evolutions.enabled=true
+play.evolutions.db.default.autoApply=true
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
