--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,7 @@ slick.default="models.database.*"
 # You can disable evolutions if needed
 #play.evolutions.enabled=true
 play.evolutions.db.default.autoApply=true
+play.evolutions.db.default.autoApplyDowns=true
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
